--- a/local.yml
+++ b/local.yml
@@ -777,12 +777,20 @@
       become: false
       tags: dot_files
 
+    - name: "🔹[starship] ensure the .config directory exists"
+      file:
+        path: "/root/.config"
+        state: directory
+        mode: '0700'
+        owner: root
+        group: root
+
     - name: "🔹[starship] ensure the starship configuration file is present"
       copy:
         src: files/starship.toml
         dest: /root/.config/starship.toml
-        owner: "{{ ansible_env.SUDO_USER }}"
-        group: "{{ ansible_env.SUDO_USER }}"
+        owner: root
+        group: root
         mode: '0644'
       become: true
       tags: dot_files
