--- a/local.yml
+++ b/local.yml
@@ -529,6 +529,8 @@
           - pyeapi
           - PyYAML 
           - ssh-paramiko 
+          - ansible-lint
+          - yamllint
         state: present
         executable: /usr/bin/pip3 
       become: false
